--- a/docker-compose-NPM/docker-compose.yml
+++ b/docker-compose-NPM/docker-compose.yml
@@ -1,4 +1,4 @@
- version: "3.8"
+version: "3.8"
 services:
   app:
     image: 'lepresidente/nginxproxymanager:latest'
@@ -11,7 +11,7 @@ services:
       DB_MYSQL_HOST: "db"
       DB_MYSQL_PORT: 3306
       DB_MYSQL_USER: "npm"
-      DB_MYSQL_PASSWORD: "${DB_MYSQL_PASSWORD}"
+      DB_MYSQL_PASSWORD: "${MYSQL_USER_PASSWORD}"
       DB_MYSQL_NAME: "npm"
       # Uncomment this if IPv6 is not enabled on your host
       # DISABLE_IPV6: 'true'
